docs: 添加阶段 0 第 2 周参考代码与小项目骨架